--- a/StringUnpacker/pom.xml
+++ b/StringUnpacker/pom.xml
@@ -7,6 +7,14 @@
     <groupId>unpacker</groupId>
     <artifactId>StringUnpacker</artifactId>
     <version>1.0</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
